--- a/public/view/m-training/view-training.ejs
+++ b/public/view/m-training/view-training.ejs
@@ -496,9 +496,9 @@
                         <table class="table text-nowrap">
                           <thead>
                             <tr>
+                              <th scope="col">S.no</th>
                               <th scope="col">Checked In</th>
                               <th scope="col">Checked In QR Code</th>
-                              <th scope="col">S.no</th>
                               <th scope="col">Date</th>
                               <th scope="col">Member Name</th>
                               <th scope="col">Chapter</th>
@@ -637,6 +637,8 @@ window.addEventListener('load', fetchTrainingDetails);
 });
 
     </script>
+
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
 
     <!-- Add QR Code library before your closing body tag -->
