--- a/public/view/m-transactions/all-transactions.ejs
+++ b/public/view/m-transactions/all-transactions.ejs
@@ -58,11 +58,11 @@
               </h1>
             </div>
             <div class="btn-list">
-              <a href="/t/generate-invoice"><button
+              <!-- <a href="/t/generate-invoice"><button
                 class="btn btn-primary btn-wave me-0"
               >
                 <i class="ri-share-plus me-1"></i> Generate Invoice +
-              </button></a>
+              </button></a> -->
              <a href="https://bni-data-backend.onrender.com/api/export-orders"><button
               class="btn btn-primary btn-wave me-0"
               style="background-color: #fb3e4e!important; border: #fb3e4e"
