--- a/public/view/partials/sidebar.ejs
+++ b/public/view/partials/sidebar.ejs
@@ -591,6 +591,41 @@
               <!-- End::slide -->
 
               <!-- Start::slide -->
+              <li class="slide has-sub">
+                <a href="javascript:void(0);" class="side-menu__item refund-menu">
+                  <svg
+                    xmlns="http://www.w3.org/2000/svg"
+                    class="w-6 h-6 side-menu__icon"
+                    fill="none"
+                    viewbox="0 0 24 24"
+                    stroke-width="1.5"
+                    stroke="currentColor"
+                  >
+                    <path
+                      stroke-linecap="round"
+                      stroke-linejoin="round"
+                      d="M2.25 8.25h19.5M2.25 9h19.5m-16.5 5.25h6m-6 2.25h3m-3.75 3h15a2.25 2.25 0 002.25-2.25V6.75A2.25 2.25 0 0019.5 4.5h-15a2.25 2.25 0 00-2.25 2.25v10.5A2.25 2.25 0 004.5 19.5z"
+                    ></path>
+                  </svg>
+                  <span class="side-menu__label">Manage Refund</span>
+                  <i class="ri-arrow-down-s-line side-menu__angle"></i>
+                </a>
+                <ul class="slide-menu child1">
+                  <li class="slide">
+                    <a href="/ref/initiate-refund" class="side-menu__item"
+                      >Initiate a Refund</a
+                    >
+                  </li>
+                  <li class="slide">
+                    <a href="/ref/all-refunds" class="side-menu__item"
+                      >All Refunds</a
+                    >
+                  </li>
+                </ul>
+              </li>
+              <!-- End::slide -->
+
+              <!-- Start::slide -->
               <li class="slide">
                 <a href="./add-notification.html" class="side-menu__item notification-menu">
                   <svg
@@ -726,6 +761,8 @@
     "/k/manage-kitty": ".kitty-menu",
     "/k/kitty-management": ".kitty-menu",
     "/k/add-credit": ".kitty-menu",
+    "/ref/initiate-refund": ".refund-menu",
+    "/ref/all-refunds": ".refund-menu",
   };
 
   // Mark the active menu and open its dropdown
