--- a/public/view/m-authentication/otpverification.ejs
+++ b/public/view/m-authentication/otpverification.ejs
@@ -453,8 +453,8 @@
                         <div class="card-body p-4 p-sm-5">
                             <div class="mb-3 d-flex justify-content-center">
                                 
-                                    <img src="https://bni.nmpinfotech.com/assets/logo-B426YGcQ.jpeg" alt="logo" class="desktop-logo">
-                                    <img src="https://bni.nmpinfotech.com/assets/logo-B426YGcQ.jpeg" alt="logo" class="desktop-white">
+                                    <img src="https://bninewdelhi.com/assets/logo-B426YGcQ.jpeg" alt="logo" class="desktop-logo">
+                                    <img src="https://bninewdelhi.com/assets/logo-B426YGcQ.jpeg" alt="logo" class="desktop-white">
                                 
                             </div>
                             <p class="h5 mb-2 text-center">Verification Code</p>
